lib/knob.h

/**************** Below is the interface for Julia *********************/

struct MatrixKnob;
struct FunctionKnob;
/**
 * colptr/rowval/nzval: CSC representation of sparse matrix
 */
MatrixKnob* NewMatrixKnob(
    bool constant_valued, bool constant_structured, bool is_symmetric, 
    bool is_structure_symmetric, bool is_structure_only, bool is_single_def);
void FillMatrixInfoOnce(MatrixKnob* mknob, int numrows, int numcols, int *colptr, int *rowval, double *nzval);
void  DeleteMatrixKnob(MatrixKnob* mknob);
void SetConstantValued(MatrixKnob* mknob);
void SetConstantStructured(MatrixKnob* mknob);
void SetValueSymmetric(MatrixKnob *mknob);
void SetStructureSymmetric(MatrixKnob *mknob);
void PropagateMatrixInfo(MatrixKnob* to_mknob, MatrixKnob* from_mknob);
/**
 * Compiler lets the library know if simple derivatives of the given matrix is already
 * available to avoid constructing them again.
 */
typedef enum
{
    DERIVATIVE_TYPE_TRANSPOSE = 0,
      /**< Derivative is transpose of the original matrix.
           For value derivative, in Julia notation, orig == derivative'
           For structure derivative, spones(orig) == spones(derivative') */
    DERIVATIVE_TYPE_SYMMETRIC = 1,
      /**< Derivative is a symmetric version of original matrix.
           For value derivative, original + original' - diag(original) == derivative
           For structure derivative, spones(original) + spones(original') == spones(derivative) */
    DERIVATIVE_TYPE_LOWER_TRIANGULAR = 2,
      /**< Derivative is lower triangular of original matrix
           For value derivative, tril(original) == derivative
           For structure derivative, spones(tril(original)) == spones(derivative)
           if A is lower triangular derivative of B, then B is symmetric derivative of A */
    DERIVATIVE_TYPE_UPPER_TRIANGULAR = 3,
      /**< Derivative is upper triangular of original matrix
           For value derivative, triu(original) == derivative
           For structure derivative, spones(triu(original)) == spones(derivative) 
           if A is upper triangular derivative of B, then B is symmetric derivative of B */
    DERIVATIVE_TYPE_COUNT,
} DerivativeType;
void  SetDerivative(MatrixKnob* mknob, DerivativeType type, MatrixKnob *derivative);
void  AddMatrixKnob(FunctionKnob* fknob, MatrixKnob* mknob);
MatrixKnob* GetMatrixKnob(FunctionKnob* fknob, int i);
void ForwardTriangularSolve(
    int L_numrows, int L_numcols, int* L_colptr, int* L_rowval, double* L_nzval,
    double *y, double *b, FunctionKnob *fknob);
void BackwardTriangularSolve(
    int U_numrows, int U_numcols, int* U_colptr, int* U_rowval, double* U_nzval,
    double *y, double *b, FunctionKnob *fknob);
void ILU(
    int m, int n,
    int *A_colptr, int *A_rowval, double *A_nzval,
    double *LU_nzval,
    FunctionKnob *fknob);
FunctionKnob* NewFunctionKnob();
void DeleteFunctionKnob(FunctionKnob* fknob);
/**
 * Let the function associated with fknob decide what permutation/inverse
 * permutation vector should be, and reorders its inputs and outputs accordingly.
 * Other functions just respect the decision, makes no decision, nor does any
 * reordering.
 */
void SetReorderingDecisionMaker(FunctionKnob *fknob);
void ReorderMatrixInplace(int numRows, int numCols, int *colptr, int *rowval, double *nzval,
                 int *perm, int *inversePerm);
void ReorderMatrix(int numRows, int numCols, int *colptr, int *rowval, double *nzval, int *colptr_out, int *rowval_out, double *nzval_out, 
                 int *perm, int *inversePerm);