src/lib-interface.jl

# This file contains the routines that interfaces with SpMP library.

const LIB_PATH = libcsr

@doc """
Create a knob for a matrix with the given properties of it, while this matrix
might not have been created yet.

Properties: 
constant_valued:        The matrix is a constant in value. It implies 
                        constant_structured below.
constant_structured:    The matrix has always the same structure, even if its
                        value may be changed.
is_symmetric:           The matrix is symmetric in value.
                        It implies is_structure_symmetric below.
is_structure_symmetric: The matrix is symmetric in structure.
is_structure_only :     Only the structure of matrix should be used.
is_single_def:          The matrix is statically defined only once.
"""
function new_matrix_knob(
    A                      :: Symbol, # Useless. Only for better readability of the generated code
    constant_valued        = false,
    constant_structured    = false,
    is_symmetric           = false,
    is_structure_symmetric = false,
    is_structure_only      = false,
    is_single_def          = false
 )
    # Note: is_structure_symmetric is only for CoSP2. In general, the matrix
    # must be constant valued or structured.
    assert(constant_valued || constant_structured || is_structure_symmetric || !collective_structure_prediction_enabled)
    assert(!constant_valued || constant_structured || !collective_structure_prediction_enabled)
    assert(!is_symmetric || is_structure_symmetric || !collective_structure_prediction_enabled)
    mknob = ccall((:NewMatrixKnob, LIB_PATH), Ptr{Void},
                   (Bool, Bool, Bool, Bool, Bool, Bool),
                   constant_valued, constant_structured, is_symmetric,
                   is_structure_symmetric, is_structure_only, is_single_def)
end

@doc """ Fill matrix info into the knob """
function fill_matrix_info_once(
    mknob :: Ptr{Void},
    A     :: SparseMatrixCSC
 )
    ccall((:FillMatrixInfoOnce, LIB_PATH), Void,
            (Ptr{Void}, Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}),
             mknob, A.m, A.n, pointer(A.colptr), pointer(A.rowval), pointer(A.nzval))
end

@doc """ Set the matrix as constant_structured. """
function set_constant_valued(
    mknob :: Ptr{Void}
)
    ccall((:SetConstantValued, LIB_PATH), Void, (Ptr{Void},), mknob)
end

@doc """ Set the matrix as constant_structured. """
function set_constant_structured(
    mknob :: Ptr{Void}
)
    ccall((:SetConstantStructured, LIB_PATH), Void, (Ptr{Void},), mknob)
end

@doc """ Set the matrix as value symmetric. """
function set_value_symmetric(
    mknob :: Ptr{Void}
)
    ccall((:SetValueSymmetric, LIB_PATH), Void, (Ptr{Void},), mknob)
end

@doc """ Set the matrix as structurally symmetric. """
function set_structure_symmetric(
    mknob :: Ptr{Void}
)
    ccall((:SetStructureSymmetric, LIB_PATH), Void, (Ptr{Void},), mknob)
end

@doc """ set matrix derivative """
function set_derivative(
    mknob           :: Ptr{Void},
    derivative_type :: Int,
    derivative      :: Ptr{Void}
)
    ccall((:SetDerivative, LIB_PATH), Void, (Ptr{Void}, Cint, Ptr{Void}), mknob, derivative_type, derivative)
end

@doc """
Derivative types between two matrix knobs.
NOTE: when adding any new type, or changing any type' integer value,
make sure to change int2derivative_map as well.
"""
const DERIVATIVE_TYPE_TRANSPOSE = 0
const DERIVATIVE_TYPE_SYMMETRIC = 1
const DERIVATIVE_TYPE_LOWER_TRIANGULAR = 2
const DERIVATIVE_TYPE_UPPER_TRIANGULAR = 3

const int2derivative_map = Dict(
    0 => GlobalRef(SparseAccelerator, :DERIVATIVE_TYPE_TRANSPOSE),
    1 => GlobalRef(SparseAccelerator, :DERIVATIVE_TYPE_SYMMETRIC),
    2 => GlobalRef(SparseAccelerator, :DERIVATIVE_TYPE_LOWER_TRIANGULAR),
    3 => GlobalRef(SparseAccelerator, :DERIVATIVE_TYPE_UPPER_TRIANGULAR)
)

@doc """ Delete a matrix knob. """
function delete_matrix_knob(
    mknob :: Ptr{Void}
)
    ccall((:DeleteMatrixKnob, LIB_PATH), Void, (Ptr{Void},), mknob)
end

@doc """ Propagate a matrix knob's information to another. """
function propagate_matrix_info(
    to_mknob   :: Ptr{Void},
    from_mknob :: Ptr{Void}
)
    ccall((:PropagateMatrixInfo, LIB_PATH), Void, (Ptr{Void}, Ptr{Void}), to_mknob, from_mknob)
end

@doc """ Associate a matrix knob with a function knob. """
function add_mknob_to_fknob(
    mknob :: Ptr{Void}, 
    fknob :: Ptr{Void}
)
    ccall((:AddMatrixKnob, LIB_PATH), Void, (Ptr{Void}, Ptr{Void}), 
        fknob, mknob)
end

@doc """ Create a function knob. """
function new_function_knob(
    fknob_creator :: AbstractString
)
    assert(fknob_creator != "")

    # Simulate ccall((fknob_creator, LIB_PATH), Ptr{Void}, ()). We cannot directly
    # use this ccall here because (fknob_creator, LIB_PATH) is treated as a tuple,
    # instead of a pointer or expression.
    expr = Expr(:call, 
        TopNode(:ccall), 
        Expr(:call, TopNode(:tuple), QuoteNode(fknob_creator), LIB_PATH), 
        Ptr{Void}, 
        Expr(:call, TopNode(:svec))
    )
    eval(expr)
end
new_function_knob() = new_function_knob("NewFunctionKnob")

@doc """ Delete a function knob. """
function delete_function_knob(
    fknob_deletor :: AbstractString, 
    fknob         :: Ptr{Void}
)
    assert(fknob_deletor != "")

    # Simulate ccall((fknob_deletor, LIB_PATH), Void, (Ptr{Void},), fknob). We cannot directly
    # use this ccall here because (fknob_deletor, LIB_PATH) is treated as a tuple,
    # instead of a pointer or expression.
    expr = Expr(:call, 
        TopNode(:ccall), 
        Expr(:call, TopNode(:tuple), QuoteNode(fknob_deletor), LIB_PATH), 
        GlobalRef(Main, :Void), 
        Expr(:call, 
                TopNode(:svec),
                Expr(:call, 
                      TopNode(:apply_type), 
                      GlobalRef(Main, :Ptr),
                      GlobalRef(Main, :Void)
                )
        ),
        Expr(:call, 
                TopNode(:unsafe_convert), 
                Expr(:call, 
                      TopNode(:apply_type), 
                      GlobalRef(Main, :Ptr),
                      GlobalRef(Main, :Void)
                ),
                fknob
        ),
        fknob
    )
    eval(expr)
end
delete_function_knob(fknob :: Ptr{Void}) = delete_function_knob("DeleteFunctionKnob", fknob)

function replace_lower_with_UT(
    A     :: SparseMatrixCSC,
    U     :: SparseMatrixCSC
)
    ccall((:ReplaceLowerWithUT, LIB_PATH), Void,
           (
            Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}, 
            Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}
           ),
            A.m, A.n, pointer(A.colptr), pointer(A.rowval), pointer(A.nzval),
            U.m, U.n, pointer(U.colptr), pointer(U.rowval), pointer(U.nzval))
end

@doc """
Context-sensitive forward triangular solver, equivalent to Base.SparseMatrix.
fwdTriSolve!(L, b).
"""
function fwdTriSolve!(
    L     :: SparseMatrixCSC{Float64, Int32}, 
    b     :: Vector,
    fknob :: Ptr{Void}
 )
    mknob_L = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
    assert(mknob_L != C_NULL)
    fill_matrix_info_once(mknob_L, L)

    ccall((:ForwardTriangularSolve, LIB_PATH), Void,
           (
            Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}, 
            Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Void},
           ),
            L.m, L.n, pointer(L.colptr), pointer(L.rowval), pointer(L.nzval),
            pointer(b), pointer(b), fknob)
    b
end

@doc """
Context-sensitive forward triangular solver, equivalent to x = Base.SparseMatrix.
fwdTriSolve!(L, b).
"""
function fwdTriSolve!(
    x     :: Vector,
    L     :: SparseMatrixCSC{Float64, Int32}, 
    b     :: Vector,
    fknob :: Ptr{Void}
 )
    # ISSUE: if x is not allocated space yet in the caller,can we really copy b to x in this way?
    x[:] = copy(b)
    fwdTriSolve!(L, x, fknob)
    x
end

@doc """ 
Context-sensitive backward triangular solver. 
"""
function bwdTriSolve!(
    U     :: SparseMatrixCSC{Float64, Int32}, 
    b     :: Vector,
    fknob :: Ptr{Void}
 )
    mknob_U = ccall((:GetMatrixKnob, LIB_PATH), Ptr{Void}, (Ptr{Void}, Cint), fknob, 0)
    assert(mknob_U != C_NULL)
    fill_matrix_info_once(mknob_U, U)
    
    ccall((:BackwardTriangularSolve, LIB_PATH), Void,
              (Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
               Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Void}),
               U.m, U.n, pointer(U.colptr), pointer(U.rowval), pointer(U.nzval),
               pointer(b), pointer(b), fknob)
    b
end

@doc """
Context-sensitive backward triangular solver, equivalent to x = Base.SparseMatrix.
bwdTriSolve!(L, b).
"""
function bwdTriSolve!(
    x     :: Vector,
    U     :: SparseMatrixCSC{Float64, Int32}, 
    b     :: Vector,
    fknob :: Ptr{Void}
 )
    # ISSUE: if x is not allocated space yet in the caller,can we really copy b to x in this way?
    x[:] = copy(b)
    bwdTriSolve!(U, x, fknob)
    x
end

function speye_int32(m::Integer)
  rowval = [Int32(x) for x in [1:m;]]
  colptr = [Int32(x) for x in [rowval; m + 1]]
  nzval = ones(Float64, m)
  return SparseMatrixCSC(m, m, colptr, rowval, nzval)
end

function ilu(
    A     :: SparseMatrixCSC{Float64, Int32}
 )
    LU_nzval = zeros(nnz(A))

    ccall((:ILU, LIB_PATH), Void,
          (Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Void}),
          size(A, 1), size(A, 2),
          A.colptr, A.rowval, A.nzval,
          LU_nzval,
          C_NULL)

    LU = SparseMatrixCSC{Cdouble, Cint}(size(A, 1), size(A, 2), copy(A.colptr), copy(A.rowval), LU_nzval)
    LU = LU'

    L = tril(LU, -1) + speye_int32(size(LU, 1))
    U = triu(LU)

    L, U
end

@doc """ 
Reorder a sparse matrix A and store the result in new_A. A itself is not changed.
If get_permutation is true, then compute the permutation and inverse permutation
vector P and inverse_P. Otherwise, P and inverse_P are given inputs.
One_based_input/output tells if A and new_A are 1-based.
ISSUE: We hard code a sparse matrix format to be SparseMatrixCSC{Cdouble, Cint},
and a permutation and inverse permutation vector to be Vector{Cint}.
Should make it general in future
"""
function reorder_matrix(
    A                :: SparseMatrixCSC{Float64, Int32}, 
    new_A            :: SparseMatrixCSC{Float64, Int32}, 
    P                :: Vector, 
    inverse_P        :: Vector
)
    ccall((:ReorderMatrix, LIB_PATH), Void,
              (Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
               Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
               Ptr{Cint}, Ptr{Cint}),
               A.m, A.n, pointer(A.colptr), pointer(A.rowval), pointer(A.nzval),
               pointer(new_A.colptr), pointer(new_A.rowval), pointer(new_A.nzval),
               pointer(P), pointer(inverse_P))
end

function reorder_matrix!(
    A                :: SparseMatrixCSC{Float64, Int32}, 
    P                :: Vector, 
    inverse_P        :: Vector,
)
    ccall((:ReorderMatrixInplace, LIB_PATH), Void,
              (Cint, Cint, Ptr{Cint}, Ptr{Cint}, Ptr{Cdouble},
               Ptr{Cint}, Ptr{Cint}),
               A.m, A.n, pointer(A.colptr), pointer(A.rowval), pointer(A.nzval),
               pointer(P), pointer(inverse_P))
    A
end

@doc """ Inversely reorder vector V with permutation vector P """
function inverse_reorder_vector!(
    V     :: Vector, 
    P     :: Vector
)
    ccall((:reorderVectorWithInversePermInplace, LIB_PATH), Void,
         (Ptr{Cdouble}, Ptr{Cint}, Cint),
         pointer(V), pointer(P), length(V))
    V
end

function set_reordering_decision_maker(
    fknob :: Ptr{Void}
 )
    ccall((:SetReorderingDecisionMaker, LIB_PATH), Void,
         (Ptr{Void},),
         fknob)
end
